--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 
 {
   "name": "react-native-image-to-pdf",
+  "description": "A react-native plugin to convert images to PDFs",
+  "homepage": "https://github.com/MattiasMansson/react-native-image-to-pdf",
   "version": "1.1.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +12,7 @@
     "react-native"
   ],
   "author": "Jonas Laux, Philipp Mueller",
+  "contributors": ["Mattias Mansson"],
   "license": "MIT",
   "peerDependencies": {
     "react-native": "^0.41.2"
